--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <br />
                 <h2 class="center">About</h2>
                 <p>This is a fan site dedicated to my oshi, the ultimate dumpster diving witch, <a
-                        href="https://www.youtube.com/@RakiKazuki" class="accent" target="_blank">Raki Kazuki</a> of <a
-                        href="https://www.pixel-link.com/" class="accent" target="_blank">PixelLink</a>! </p>
+                        href="https://www.youtube.com/@RakiKazuki" class="accent" target="_blank">Raki Kazuki</a> of
+                    PixelLink!</p>
                 <br />
                 <h2 class="center">Credit</h2>
                 <p>Created by <a href="https://twitter.com/Jellis2k" class="accent" target="_blank">Jellis</a></p>
