--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Rahhh's for the Soul</title>
-
+    <link rel="icon" type="image/png" href="/src/icons8-ribbon-48.png">
 </head>
 
 <body>
